services/frigate/ingress.yaml
# services/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: services
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  rules:
    - host: frigate.agate.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 5000
